FIX: --igl-vertical-spacing

--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -231,9 +231,10 @@
 
   .morpheme,
   .word {
-    display:          flex;
-    flex-direction:   column;
-    margin-block-end: var(--igl-vertical-spacing);
+    display:            flex;
+    flex-direction:     column;
+    margin-block-end:   var(--igl-vertical-spacing);
+    margin-block-start: var(--igl-vertical-spacing);
   }
 
   .morpheme > *,
@@ -250,9 +251,8 @@
 
   .txn, .transcription {
     .txn;
-    margin:           0em;
-    margin-block-end: var(--igl-vertical-spacing);
-    padding:          0em;
+    margin:  0em;
+    padding: 0em;
   }
 
   .tln, .translation {
